--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,5 @@
-beautifulsoup4==4.9.0
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.1
-dash==1.11.0
-dash-bootstrap-components==0.9.2
-dash-core-components==1.9.1
-dash-html-components==1.0.3
-dash-renderer==1.4.0
-dash-table==4.6.2
-Flask==1.1.2
-Flask-Compress==1.4.0
-future==0.18.2
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-numpy==1.18.3
-pandas==1.0.3
-plotly==4.6.0
-python-dateutil==2.8.1
-pytz==2019.3
-requests==2.23.0
-retrying==1.3.3
-six==1.14.0
-soupsieve==2.0
-urllib3==1.25.9
-Werkzeug==1.0.1
+beautifulsoup4
+brotli
+dash-bootstrap-components
+pandas
+requests
